--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="app_name">Proyecto Final</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">"Proyecto Final"</string>
 
     <string name="action_settings">Settings</string>
 
